# POS-Project2024

./: CMakeLists.txt  Menu.c  Menu.h  main.c  map.c  map.h
Assets/: communication.c  communication.h  ipc.c  ipc.h  utils.c  utils.h
Client/: client.c  client.h  inputHandler.c  inputHandler.h  menuInterface.c  menuInterface.h
GUI/: main.c  render_text.c  render_text.h
Maps/: mapFive.txt  mapFour.txt  mapOne.txt  mapSix.txt  mapThree.txt  mapTwo.txt
Server/: gameLogic.c  gameLogic.h  mapGenerator.c  mapGenerator.h  server.c  server.h
Snake/: CMakeLists.txt
